src/assets/css/nysds-site.css
/* ... */
@media (min-width: 768px) {
    .site-header__list {
        font-size: var(--nys-font-size-body-md);
    }

    .site-header__link {
        padding: var(--nys-space-100) var(--nys-space-200);
    }
}

@media (min-width: 1024px) {
    .site-header__logo img {
        max-width: 350px;
        height: auto;
    }

    .site-header__inner {
        flex-direction: row;
        justify-content: space-between;
    }

    .site-header__nav {
        flex-grow: 1;
        display: flex;
        justify-content: flex-end;
    }

    .site-header__list {
        justify-content: flex-end;
    }
}

/* Section Header */

.section-header {
    background-color: var(--nys-color-info-weak);
    color: var(--nys-color-theme-strong, #fff);
}

.section-components .section-header {
    background-color: var(--nys-color-theme-strong);
    color: var(--nys-color-theme-weak, #fff);
}

.section-header__inner {
    padding-top: var(--nys-space-200);
    padding-bottom: var(--nys-space-200);
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    gap: var(--nys-space-200);

}

.section-header__title {
    line-height: 1;
    text-transform: uppercase;
    font-weight: 100;
    letter-spacing: 5px;
}

.section-header__media {
    margin-top: var(--nys-space-50);
    overflow: hidden;
    ;
}

.section-header__media img {
    max-width: 100%;
    display: block;
    width: clamp(200px, 50vw, 550px);
    height: auto;
}

@media (min-width: 768px) {
    .section-header__inner {
        flex-direction: row;
        align-items: flex-end;
    }

    .section-header__media {
        margin-top: 0;
    }
}

/* Site Footer */

.site-footer {
    background-color: var(--nys-color-theme-weaker);
    color: var(--nys-color-ink);
    padding: var(--nys-space-400) 0;
    font-size: var(--nys-font-size-body-md);
}

.site-footer__list-header {
    padding-bottom: var(--nys-space-100);
    margin-bottom: var(--nys-space-200);
    border-bottom: solid 1px var(--nys-color-theme);
}

.site-footer ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.site-footer li {
    margin-bottom: var(--nys-space-200);
}

.site-footer a {
    color: var(--nys-color-ink);
    text-decoration: none;
}

.site-footer a:hover {
    text-decoration: underline;
}

/* Page Content */

.page-content img {
    max-width: 100%;
    height: auto;
    margin: var(--nys-space-200) 0;
}

/* Page Header */
.page-header {
    padding-top: var(--nys-space-600);
    margin-bottom: var(--nys-space-600);
}

.page-content pre {
    padding: var(--nys-space-1px) var(--nys-space-2px);
    border-radius: var(--nys-radius-md);
    color: var(--nys-color-red-600);
    background: var(--nys-color-neutral-10);
    margin-bottom: var(--nys-space-150);
    width: fit-content;
}

.page-header h1.page-title {
    margin-top: 0;
}

/* Featured Image */
.page-header__media img {
    max-width: 100%;
    height: auto;
    display: block;
    margin: 0;
}

.page-header__media {
    margin-bottom: var(--nys-space-400);
}

.page-subtitle,
.page-subtitle>* {
    font-size: var(--nys-font-size-h4);
    line-height: var(--nys-font-lineheight-xl);
    font-weight: var(--nys-font-weight-light);
    color: var(--nys-color-text-weak);
    margin-bottom: var(--nys-space-200);
}

/* Page Meta */

.page-meta {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    /* Optional, if you want it to wrap nicely on smaller viewports */
    gap: var(--nys-space-400);
    /* 12px spacing between all items */
    color: var(--nys-color-text-weaker);
    font-size: var(--nys-font-size-body-sm);
}

/* Star Releases */

.release-mark::before {
    content: "✪";
    display: inline-block;
    margin-right: var(--nys-space-50);
    line-height: 1;
}

/* Author */
.page-author {
    display: flex;
    align-items: center;
    gap: var(--nys-space-100);
    color: var(--nys-color-text);
}

/* NYS Design System Subheader */

.ex-header {
    margin-bottom: var(--nys-space-200);
    background-color: var(--nys-color-theme-strong);
}

.ex-header__title {
    color: white;
}

/* Card */

.card {
    border: solid var(--nys-size-1px) var(--nys-color-neutral-200);
    border-radius: var(--nys-radius-xxl);
    padding: var(--nys-space-200);
    margin-bottom: var(--nys-space-400);
    align-items: stretch;
    position: relative;
    text-decoration: none;
    color: inherit;
    background-color: var(--nys-color-surface, #fff);
}

.card__inner {
    display: flex;
    flex-direction: column;
    height: auto;
    justify-content: flex-start;
}

/* Media */

.card__media {
    margin-bottom: var(--nys-space-100);
}

.card__media--thin {
    height: 180px;
    overflow: hidden;
}

.card--horizontal .card__media--thin img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.card__media img {
    display: block;
    /* Remove bottom space under image */
    width: 100%;
    height: 100%;
    /* object-fit: contain; */
    border-radius: var(--nys-radius-lg);
}

/* Content */

.card__title {
    font-size: var(--nys-font-size-h3);
    font-weight: var(--nys-font-weight-h3, bold);
    margin-bottom: var(--nys-space-150);
    line-height: var(--nys-font-lineheight-lg);
}

.card__eyebrow {
    font-size: var(--nys-font-size-md);
    font-weight: var(--nys-font-weight-extralight);
    text-transform: uppercase;
    color: var(--nys-color-text-weak);
    margin-bottom: var(--nys-space-100);
    letter-spacing: var(--nys-space-50);
}

.card__badge {
    margin-bottom: var(--nys-space-100);
}

.card__desc {
    line-height: var(--nys-font-lineheight-sm);
}

.card__action {
    margin-top: var(--nys-space-200);
}

/* Linked Card */
a.card {
    color: inherit;
    text-decoration: none;
    max-width: 100%;
    display: block;
}

a.card::after {
    content: "";
    position: absolute;
    inset: 0;
    z-index: 1;
    background: transparent;
}
/* ... */

